# GameEngineDevelop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  GameDevelop.sln  InstallDllAndAsset.bat  LICENSE.md  README.md
Editor/: CMakeLists.txt  Editor.cpp  Editor.ui
Editor/QML/: main.qml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Source/: Application.cpp  Application.h  CMakeLists.txt  GameInstance.cpp  GameInstance.h  Log.cpp  Log.h  Main.cpp
Engine/Source/Component/: Collider2D.cpp  Collider2D.h  IComponent.h  Transform.cpp  Transform.h
Engine/Source/Config/: GlobalConfiguration.cpp  GlobalConfiguration.h
Engine/Source/Engine/Core/: Character.h  EngineCore.h
Engine/Source/Entities/: Entities.h  GameObject.cpp  GameObject.h  Player.h  RenderableObject.cpp  RenderableObject.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
Engine/Source/Game/: GameInstance.cpp  GameInstance.h  GlobalConfiguration.cpp
Engine/Source/Game/Breakout/: Ball.cpp  Ball.h  Breakout.cpp  Breakout.h  Brick.cpp  Brick.h  GameConfig.h  GameLevel.cpp  GameLevel.h  Paddle.cpp  Paddle.h  ParticleGenerator.cpp  ParticleGenerator.h  PowerUp.cpp  PowerUp.h  PowerUpSpawner.cpp  PowerUpSpawner.h
Engine/Source/Game/PlaneWar/: PlaneWarGame.cpp
Engine/Source/Game/Snake/: Food.h  ScoreBoard.cpp  ScoreBoard.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h  Wall.cpp  Wall.h
Engine/Source/Gui/: Button.cpp  Button.h  ButtonDescript.cpp  ButtonDescript.h  GuiObject.h  Label.cpp  Label.h
Engine/Source/Managers/: AudioManager.cpp  AudioManager.h  FontManager.cpp  FontManager.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  Managers.cpp  Managers.h  NetworkManager.cpp  NetworkManager.h  PhysicsManager.cpp  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  StateManager.cpp  StateManager.h  StatisticsManager.cpp  StatisticsManager.h  TimeManager.h  WindowManager.cpp  WindowManager.h
Engine/Source/Math/: Math.cpp  Math.h
Engine/Source/Message/: Message.h
Engine/Source/Misc/: GameTimer.cpp  GameTimer.h
Engine/Source/Network/: NetMessage.cpp  NetMessage.h  NetworkClient.cpp  NetworkClient.h
Engine/Source/Physics/: HitInfo.cpp  HitInfo.h  Physics2D.cpp  Physics2D.h
Engine/Source/Platform/: CMakeLists.txt  IWindow.h  Window.cpp  Window.h  WindowImp.cpp  WindowImp.h  WindowsMessageHandler.cpp
Engine/Source/RHI/: D3D12GraphicsDevice.cpp  D3D12GraphicsDevice.h  D3dUtil.cpp  D3dUtil.h  DrawCommand.h  IGraphicsDevice.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VulkanGrahphicsDevice.cpp  VulkanGraphicsDevice.h
Engine/Source/Renderer/: ImguiRenderer.cpp  ImguiRenderer.h  Particle.cpp  Particle.h  ParticleRenderer.cpp  ParticleRenderer.h  PostProcessingRenderer.cpp  PostProcessingRenderer.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
Engine/Source/Scene/: Scene.cpp  Scene.h
EngineTest/: CMakeLists.txt  EngineTest.vcxproj  test.cpp
GameClientDev/: CMakeLists.txt  GameClientDev.vcxproj  GameClientDev.vcxproj.filters  Main.cpp
GameClientDev/Game/Snake/Source/: Food.cpp  Food.h  ScoreBoard.cpp  ScoreBoard.h  Snake.cpp  Snake.h  SnakeGameInstance.cpp  SnakeGameInstance.h  SnakeMap.h  Wall.h
GameDevelop/: GameDevelop.vcxproj  GameDevelop.vcxproj.filters
GameDevelop/Assets/Conf/: gConfig.xml
GameDevelop/Assets/Shaders/: sprite.fragment
GameDevelop/Source/: Application.cpp  GraphicsManager.h  IEntity.h  InputManager.h  Main.cpp  ResourceManager.h
GameDevelop/Source/Component/: Collider2D.h  IComponent.h
GameDevelop/Source/Core/: GameInstance.h  InputManager.cpp  InputManager.h
GameDevelop/Source/Engine/: Engine.h
GameDevelop/Source/Entities/: Camera2D.cpp  Camera2D.h  GameObject.cpp  GameObject.h  Player.cpp  Sprite.h
GameDevelop/Source/Game/: GameInstance.cpp  GlobalConfiguration.cpp  GlobalConfiguration.h  RpgGame.cpp  RpgGame.h
GameDevelop/Source/Game/Breakout/: Breakout.cpp  Brick.cpp
GameDevelop/Source/Game/PlaneWar/: PlaneWarGame.h
GameDevelop/Source/Game/Snake/: Food.cpp  ScoreBoard.cpp  ScoreBoard.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h
GameDevelop/Source/Game/Tetris/: TetrisGame.h
GameDevelop/Source/Gui/: Label.cpp
GameDevelop/Source/Managers/: AudioManager.cpp  AudioManager.h  FontManager.cpp  FontManager.h  GraphicsManager.cpp  GraphicsManager.h  IManager.h  InputManager.cpp  InputManager.h  PhysicsManager.h  ResourceManager.cpp  ResourceManager.h  StateManager.cpp  StateManager.h
GameDevelop/Source/Math/: Math.cpp  Math.h
GameDevelop/Source/Network/: InputMemoryStream.h  NetworkClient.cpp
GameDevelop/Source/Physics/: Physics2D.cpp  Physics2D.h
GameDevelop/Source/Platform/: IApplication.h  SfmlApplication.cpp  SfmlApplication.h  WindowsApplication.cpp  WindowsApplication.h  WindowsMessageHandler.h  WindowsWindow.cpp  WindowsWindow.h
GameDevelop/Source/RHI/: Character.cpp  Character.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
GameDevelop/Source/Renderer/: SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.h
GameDevelop/Source/RuntimeSupport/: IRuntime.h
GameDevelop/x64/Debug/: vc142.idb
GameDevelop/x64/Debug/GameDevelop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameDevelop.lastbuildstate  GameDevelop.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameServerDev/: BillBoard.cpp  BillBoard.h  CMakeLists.txt  FileHelper.cpp  FileHelper.h  GameServer.cpp  GameServer.h  GameServerDev.vcxproj  GameServerDev.vcxproj.filters  Player.h  RankList.h  UdpSocketServer.h
GameSeverDev/: GameServer.cpp  GameServer.h  GameSeverDev.vcxproj  GameSeverDev.vcxproj.filters  Main.cpp
x64/Debug/: GameDevelop.ilk
